--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-    <body>
+
+{% block title_block %}
+    Add a Page
+{% endblock %}
+
+{% block body_block %}
         <h1>Add a Page</h1>
         <div>
             <form id="Page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
@@ -20,5 +22,4 @@
                 <input type="submit" name="submit" value="Create Page" />
             </form>
         </div>
-    </body>
-</html>
+{% endblock %}
