--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -24,8 +24,9 @@
     {% endif %}
 
 
-
-    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+        {% if user.is_authenticated %}
+            <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+        {% endif %}
     {% else %}
     The specified category does not exist.
     {% endif %}
